force-app/main/default/objects/Jira_Push_Object__mdt/Jira_Push_Object__mdt.object-meta.xml
<CustomObject>
    <label>Jira Push Object</label>
    <pluralLabel>Jira Push Objects</pluralLabel>
</CustomObject>