force-app/main/default/objects/Jira_Push_Object__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If false, this object is skipped by the JiraPushService.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>