force-app/main/default/objects/Jira_Push_Object__mdt/fields/Jira_Issue_Type__c.field-meta.xml
<CustomField>
    <fullName>Jira_Issue_Type__c</fullName>
    <description
  >Jira issue type (e.g. Story, Bug) used by JCFS.API.pushTopicToJira to create issues. Per-SObject so different objects can map to different issue types.</description>
    <label>Jira Issue Type</label>
    <length>40</length>
    <type>Text</type>
</CustomField>