force-app/main/default/objects/Jira_Push_Object__mdt/fields/Jira_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Jira_Project_Id__c</fullName>
    <description
  >Jira project key (e.g. CSI) used by JCFS.API.pushTopicToJira to route issues. Per-SObject so different objects can target different projects.</description>
    <label>Jira Project Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>