force-app/main/default/objects/Jira_Push_Object__mdt/fields/Qualifying_Fields__c.field-meta.xml
<CustomField>
    <fullName>Qualifying_Fields__c</fullName>
    <description>Comma-separated field API names. An update qualifies for a Jira push if ANY of these fields changed. Inserts always qualify when Active__c is true. Leave blank to qualify on every update.</description>
    <label>Qualifying Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>