force-app/main/default/objects/Jira_Push_Object__mdt/fields/SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SObject_API_Name__c</fullName>
    <description>API name of the SObject this row configures (e.g. Opportunity, Case).</description>
    <externalId>true</externalId>
    <label>SObject API Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>